css/style.css
:root{
  /* Colours */
  --em-orange: #f44100;
  --gray-90: #161616;
  --gray-70: #4F4F4F;
  --gray-50: #B0B0B0;
  --gray-30: #4F4F4F;
  --gray-10: #F3F1F0;
  --white: #FFFFFF;

  --robot-diameter-big: 320px;
  --robot-diameter-small: 160px;
  --em-logo-size: 200px;
  --joint-logo-size: 400px;
}

body{
  background: linear-gradient(var(--gray-70), var(--gray-90));
  height: 100vh;
  overflow-y: hidden;
}

#em-logo{
  /* Currently not in use as client wanted both logos */
  width: var(--em-logo-size);
  opacity: .2;

  position: absolute;
  left: calc(50vw - var(--em-logo-size) / 2);
  bottom: 30px;
}

#tue-x-em-logos{
  width: var(--joint-logo-size);
  opacity: .2;

  position: absolute;
  left: calc(50vw - var(--joint-logo-size) / 2);
  bottom: 50px;
}

.container{
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;

  animation: moveIn_Left 2s ease-in-out;
  will-change: transform;
}

.robot-avatar{
  width: var(--robot-diameter-big);
  height: auto;
  box-sizing: border-box;
  background: linear-gradient(var(--white), var(--gray-10));
  border-radius: 50%;
  border: 8px solid #B0B0B0;
}

.robot-avatar img{
  max-width: 100%;
  border-radius: 100%;
  margin-bottom: -3px;
}

#user-avatar{
  width: var(--robot-diameter-small);
  height: auto;
  box-sizing: border-box;
  background: linear-gradient(var(--white), var(--gray-10));
  border-radius: 50%;
  border: 8px solid #B0B0B0;

  position: absolute;
  right: 60px;
  bottom: 60px;
  opacity: 0;
  transform: translateY(230px);
}

#user-avatar img{
  max-width: 100%;
  border-radius: 100%;
  margin-bottom: -3px;
}

.user-avatar-untransform{
  transform: translateY(0px) !important;
  transition: 1s ease-in-out;
  opacity: 1 !important;
}

.em-glow{
  box-shadow: 0px 10px 80px rgba(197, 175, 142, .6);
}

.dialogue-window{
  box-sizing: border-box;
  background: linear-gradient(var(--white), var(--gray-10));
  border-radius: 15px;
  border: 8px solid #B0B0B0;
  width: calc(var(--robot-diameter-big) * 3);
  margin-left: 50px;
  position: relative;

  animation: moveIn_Right 2s ease-in-out;
  will-change: transform;
}

.dialogue-window:after, dialogue.window:before{
  right: 100%;
	top: 50%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
}

.dialogue-window:after {
	border-color: rgba(255, 255, 255, 0);
	border-right-color: #B0B0B0;
	border-width: 20px;
	margin-top: -20px;
}
.dialogue-window:before {
	border-color: rgba(176, 176, 176, 0);
	border-right-color: #B0B0B0;
	border-width: 56px;
	margin-top: -56px;
}

.dialogue-window p{
  font-family: Futura, sans-serif;
  font-weight: 500;
  font-size: 40px;
  line-height: 150%;
  padding: 50px 50px;
  color: var(--gray-90);

}

.dialogue-window p .highlight{
  color: var(--em-orange);
}

.next-icon{
  width: 30px;
  border: 2px solid black;
  opacity: .6;
  border-radius: 50%;
  margin-left: 10px;
  margin-bottom: -2px;

  position: relative;
  animation: animateCursor 2s infinite;
  animation-direction: alternate;
}

.orange-icon{
  border: 2px solid var(--em-orange);
  opacity: 1;
}

.dark-overlay{
  position: absolute;
  height: 100vh;
  width: 100vw;
  background-color: #000000;
  z-index: 1337;

  animation: fadeOut 2s ease-in-out;
  animation-fill-mode: forwards;
}

.ti-cursor{
  transition: 1s all;
  /* animation: animateCursor 2s infinite; */
}

.qr-code-image{
  position: absolute;
  z-index: 1337;
  /* bottom: 138px;
  right: 140px;
  width: 180px; */

  bottom: 184px;
  right: 185px;
  width: 140px;

  border-radius: 10px;
  animation: fadeIn 2s ease-in-out;
}

#particles-js{
  position: absolute;
  z-index: -1;
  height: 100vh;
  width: 100vw;
}

@keyframes moveIn_Left {
  0%    { transform: translateX(-100vw); }
  100%  { transform: translateX(0vw); }
}

@keyframes moveIn_Right {
  0%    { transform: translateX(200vw); }
  100%  { transform: translateY(0vh); }
}

@keyframes fadeOut {
  0%    { opacity: 1; }
  99%    { opacity: 0; transform: translateX(0)}
  100%   { opacity: 0; transform: translateX(-100vw)}
  /* added in transform as a temporary clipping fix */
}

@keyframes fadeIn {
  0%    { opacity: 0; }
  100%    { opacity: 1; }
}

@keyframes animateCursor {
  0%    {transform: translateX(0px); }
  100%  {transform: translateX(20px); }
}



/* Do we want to have user input in the design? If so, how should this be implemented? Touch screen? Keyboard input?

.dialogue-window p .user-input{
  display: block;
  margin-top: 15px;
  font-size: 34px;
  color: #555;
}/*

